--- a/css/shortcode_nuestras_plazas.css
+++ b/css/shortcode_nuestras_plazas.css
@@ -286,3 +286,11 @@ text-align: center;}
 .info a{text-align: center;width: 100%;text-decoration: none;display: inline-block;}
 .info a span{background-color: #00a665;color:#fff;padding: 7px 15px;border-radius: 7px;display: inline-block;margin-top: 30px;font-size: 18px;}
 
+
+.filtros {background-color: #24373c;padding:20px;display: -ms-flexbox;display: -webkit-flex;display: flex;-webkit-flex-direction: row;-ms-flex-direction: row;flex-direction: row;-webkit-flex-wrap: nowrap;-ms-flex-wrap: nowrap;flex-wrap: nowrap;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-align-content: center;-ms-flex-line-pack: center;align-content: center;align-items: stretch;}
+.filtros__columnas {flex: 0 1 auto;}
+.filtros__columnas:last-child {flex: 0 1 220px !important;display: flex;justify-content: space-between;align-items: flex-end;}
+.filtros__label {margin: 0;color: #e3e77d; font-weight: 800;display: inline-block;vertical-align: middle;}
+
+#plazas #filtros__buscar {cursor: pointer;-webkit-appearance: button;background-color: #00a665;color: #fff!important;box-shadow: 0px 3px 0px 0px #008551;margin-bottom: 3px;display: inline-block;padding: 12px 25px;border: none;font-size: 14px;outline: none;line-height: 100%;max-width: 100%;text-shadow: 0 1px rgba(0, 0, 0, 0.4);}
+#plazas #filtros__buscar:hover {background-color: #009a5e;}
