--- a/css/shortcode_nuestras_plazas.css
+++ b/css/shortcode_nuestras_plazas.css
@@ -274,26 +274,34 @@ text-align: center;}
 #map .gm-style-iw-d {overflow: hidden;}
 #map .gm-ui-hover-effect{right: 10px !important}
 #map .gm-ui-hover-effect img{width: 30px !important;height: 30px !important;}
-.info{width: 500px;border-radius: 20px;min-height: 300px; margin-top: 15px;}
-.cabecera{}
-.cabecera .icono{width: 15%;text-align: center;display: inline-block;}
+.info{width: 100%;border-radius: 20px;min-height: 300px; margin-top: 15px;}
+.cabecera{text-align: center;min-width: 500px;}
+.cabecera .icono{display: inline-block;}
 .cabecera .icono img{vertical-align: middle;}
-.cabecera .titulo{width: 78%;color:#00a665;font-weight: 700;font-size: 18px;margin-left: 20px;display: inline-block;vertical-align: middle;}
+.cabecera .titulo{color:#00a665;font-weight: 700;font-size: 18px;margin-left: 20px;display: inline-block;vertical-align: middle;}
 hr{width: 100%;margin: 7px 0px;color:#DFDFD0;}
 .nombre{text-align: center;color:#1a1a1a;font-weight: 700;font-size: 16px;margin-bottom: 7px;}
-.mySlides img{width: 100%;object-fit: cover;object-position: center;height: 280px;}
-.mover {font-size: 25px;color:#000;border: none;z-index: 100; background-color: #fff;display: inline-block;position: absolute;top: 110px;left: 150px;}
-.mover.der {display: inline-block;left: 350px}
-.nombremes{display: inline-block;font-weight: 700;font-size: 17px;}
+.mySlides img{width: 100%;object-fit: cover;object-position: center;}
+.button-mover{width: 100%;position:relative;}
+.mover{font-size: 25px;color:#000;border: none;z-index: 100; display: inline-block;position: absolute;top: 0px;padding: 0px;right:10px;background-color:#fff !important;}
+.mover.izq{left:10px !important; right:auto;}
+.mover.der {display: inline-block;right:10px}
+.nombremes{display: inline-block;font-weight: 700;font-size: 17px;margin-bottom:30px;}
+.linkvolver{display: inline-block;font-weight: 700;font-size: 17px;margin-bottom:30px;background-color:#00a665; color:#fff;padding: 10px;border-radius: 5px;cursor: pointer; }
 .calendar{margin: 0}
 .info .contratista{font-size: 16px;color:#1a1a1a;}
 .info a{text-align: center;width: 100%;text-decoration: none;display: inline-block;}
 .info a span{background-color: #00a665;color:#fff;padding: 7px 15px;border-radius: 7px;display: inline-block;margin-top: 30px;font-size: 18px;}
-.info .fecha{position: absolute; bottom: 11px;left: 0; width: 100%; padding: 10px; background-color: rgba(255,255,255,0.4);font-size: 17px;font-weight: 600;color:#000;}
+.info .fecha{position: absolute; bottom: 27px;left: 0; width: 100%; padding: 10px; background-color: rgba(255,255,255,0.4);font-size: 17px;font-weight: 600;color:#000;}
 .filtros {background-color: #24373c;padding:20px;display: -ms-flexbox;display: -webkit-flex;display: flex;-webkit-flex-direction: row;-ms-flex-direction: row;flex-direction: row;-webkit-flex-wrap: nowrap;-ms-flex-wrap: nowrap;flex-wrap: nowrap;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-align-content: center;-ms-flex-line-pack: center;align-content: center;align-items: stretch;}
 .filtros__columnas {flex: 0 1 auto;}
 .filtros__columnas:last-child {flex: 0 1 220px !important;display: flex;justify-content: space-between;align-items: flex-end;}
 .filtros__label {margin: 0;color: #e3e77d; font-weight: 800;display: inline-block;vertical-align: middle;}
-
+.color_green span{}
 #plazas #filtros__buscar {cursor: pointer;-webkit-appearance: button;background-color: #00a665;color: #fff!important;box-shadow: 0px 3px 0px 0px #008551;margin-bottom: 3px;display: inline-block;padding: 12px 25px;border: none;font-size: 14px;outline: none;line-height: 100%;max-width: 100%;text-shadow: 0 1px rgba(0, 0, 0, 0.4);}
 #plazas #filtros__buscar:hover {background-color: #009a5e;}
+.day-number{padding: 9px 21px;border-radius:5px;}
+.day-number.color_green{background-color:#00a665; }
+.day-number span{padding: 0px !important;margin-top: 0px !important;background-color: transparent !important;color:#333 !important;}
+.day-number.color_green span{color:#fff !important;}
+.content_img{max-height: 380px;overflow-y: scroll;}
